Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 4.8.0, 5.0.0
-
Fix Version/s: 5.0.0
-
Component/s: SQL Support
-
Labels:None
-
Commits:156b9ab38e81ee074d384e8e5433afc96d587a11
Description
Sqlite driver put to querys values true, and false as string.
I ask about true and false values at sqlite mailing list, and I think there is a bug in qt(sql driver).
Because when I use:
bindValue("someKey", true); // this put to query 'true' as string
bindValue("someKey", 1); // this put to query 1 as integer
My message on sqlite mailing list:
http://sqlite.org:8080/cgi-bin/mailman/private/sqlite-users/2012-January/036340.html
And replays:
http://sqlite.org:8080/cgi-bin/mailman/private/sqlite-users/2012-January/036342.html
http://sqlite.org:8080/cgi-bin/mailman/private/sqlite-users/2012-January/036343.html
I think, it should be unique as integer.